--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,7 @@ a:hover {
     top: -16px;
 }
 
-.home-slide {
+.home-slide, .balance-slide {
     margin-left: -5px;
     margin-right: -5px;
 }
@@ -667,4 +667,606 @@ a:hover {
     padding: 0;
     font-size: 16px;
     font-weight: 500;
+}
+
+.market-search {
+    margin-bottom: 20px;
+}
+
+.market-search form {
+    position: relative;
+}
+
+.market-search .market-search-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 23px;
+    padding: 0;
+}
+
+.market-search input {
+    padding-left: 51px;
+}
+
+.market-tab .nav-pills .nav-link {
+    border-radius: 5px;
+    padding: 7px 12px;
+    font-weight: 500;
+    color: #666666;
+    text-transform: uppercase;
+    background: #111111;
+    border: 1px solid transparent;
+}
+
+.market-tab .nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+.market-tab .nav-pills .nav-link.active, .market-tab .nav-pills .show > .nav-link {
+    background-color: transparent;
+    color: white;
+    border: 1px solid #FFCF54;
+}
+
+.market-tab .nav-pills {
+    margin-bottom: 17px;
+}
+
+.market-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.market-header.market-header-3 .market-header-item {
+    width: 33.33%;
+    color: #666666;
+    font-size: 12px;
+}
+
+.market-body {
+    padding: 10px;
+}
+
+.market-row {
+    display: flex;
+    align-items: center;
+}
+
+.market-row.market-row-3 .market-col {
+    width: 33.3%;
+}
+
+.market-des {
+    font-size: 12px;
+    color: #666666;
+}
+
+.market-body .market-row:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.market-progress-wrap {
+    position: relative;
+    height: 25px;
+    line-height: 25px;
+    padding-right: 10px;
+}
+
+.market-progress-wrap:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: #4ED35C;
+    opacity: .2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.market-progress {
+    position: relative;
+    z-index: 2;
+}
+
+.filter-up.active,
+.filter-down.active {
+    fill: #C4C4C4;
+}
+
+.market-header-item {
+    display: flex;
+    align-items: center;
+}
+
+.account-box {
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 22px;
+    margin-top: 20px;
+}
+
+.account-ava {
+    border-radius: 10px;
+    overflow: hidden;
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+}
+
+.account-ava img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.account-mail {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 11px;
+}
+
+.account-id {
+    color: #666666;
+}
+
+.account-menu-item {
+    display: flex;
+    align-items: center;
+    padding-bottom: 13px;
+}
+
+.account-menu .account-menu-item:not(:last-child) {
+    margin-bottom: 14px;
+    border-bottom: 1px solid #101010;
+}
+
+.account-menu-icon {
+    width: 24px;
+    height: 24px;
+    border-radius: 5px;
+    background: #111111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+}
+
+.balance-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 21px 0;
+    background-image: url("../img/res/background-box-4.png");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin-top: 10px;
+    margin-bottom: 14px;
+}
+
+.balance-box-title {
+    font-weight: 500;
+    font-size: 24px;
+    text-transform: uppercase;
+}
+
+.balance-box-des {
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.balance-box-info {
+    padding: 20px;
+    margin-bottom: 10px;
+}
+
+.balance-box-info-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.balance-slide {
+    margin-bottom: 20px;
+}
+
+.balance-slide-item {
+    background: linear-gradient(156.94deg, #FFE6A8 -62.21%, rgba(92, 92, 92, 0) 112.96%);
+    border-radius: 5px;
+    padding: 17px 13px;
+    text-align: center;
+}
+
+.balance-slide-item-wrap {
+    padding: 0 5px;
+}
+
+.balance-button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.balance-button button {
+    width: calc(50% - 10px);
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    padding: 0;
+    color: #666666;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.balance-button button.active {
+    background: #FFCF54;
+    color: #212121;
+}
+
+.balance-slide-des {
+    color: #666666;
+    margin-bottom: 13px;
+}
+
+.page-trade-order .page-heading {
+    margin-left: 10px;
+    margin-right: auto;
+}
+
+.page-trade-order .app-navigator {
+    justify-content: unset;
+}
+
+.trade-panel {
+    border-radius: 5px;
+    padding: 16px 11px;
+    background: #101010;
+    display: flex;
+    justify-content: space-between;
+}
+
+.trade-panel-col {
+    width: calc(50% - 12px);
+}
+
+.trade-panel-header {
+    display: flex;
+    margin-bottom: 13px;
+}
+
+.trade-panel-header-item {
+    width: 50%;
+}
+
+.trade-progress {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2px;
+    width: 100%;
+}
+
+.trade-progress-bar {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.trade-progress .trade-value {
+    position: relative;
+    z-index: 2;
+}
+
+.trade-box-infor-title {
+    font-weight: 500;
+    font-size: 16px;
+    color: #FF4141;
+    text-align: center;
+    margin-top: 8px;
+}
+
+.trade-box-infor-des {
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.trade-panel-btn {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 7px;
+}
+
+.trade-panel-btn button {
+    width: calc(50% - 3px);
+    font-weight: 500;
+    font-size: 14px;
+    color: #FFFFFF;
+    border-radius: 2px;
+}
+
+.trade-panel-input select {
+    border-radius: 2px;
+    height: 20px;
+    font-size: 12px;
+    color: white;
+    text-align: center;
+    line-height: 20px;
+    background: #212121 url("../img/ui/icon-down.png") no-repeat right .75rem center;
+    border: none;
+    padding: 0 0 0 40%;
+    margin-bottom: 7px;
+}
+
+.trade-panel-qty {
+    position: relative;
+}
+
+.trade-panel-qty input {
+    background: #212121;
+    border-radius: 2px;
+    height: 30px;
+    color: white;
+    padding: 0;
+    text-align: center;
+    line-height: 30px;
+    border: none;
+    width: 100%;
+}
+
+.trade-panel-qty .trade-qty-plus,
+.trade-panel-qty .trade-qty-minus {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+}
+
+.trade-panel-qty .trade-qty-plus {
+    right: 12px;
+}
+
+.trade-panel-qty .trade-qty-minus {
+    left: 12px;
+}
+
+.trade-panel-qty {
+    margin-bottom: 7px;
+}
+
+.trade-panel-sum input {
+    height: 30px;
+    width: 100%;
+    background: #212121;
+    border-radius: 2px;
+    line-height: 30px;
+    border: none;
+    padding: 0;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.trade-panel-avbl {
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    font-weight: 300;
+    margin-bottom: 13px;
+}
+
+.trade-panel-sum input::placeholder {
+    color: #666666;
+}
+
+.trade-panel-avbl-value {
+    font-weight: 500;
+}
+
+.trade-panel-buy button {
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    padding: 0;
+    border-radius: 2px;
+    color: #FFFFFF;
+    font-weight: 500;
+}
+
+#trade-main-slide {
+    background: #000000;
+    height: 1px;
+    border: none;
+    width: 100%;
+}
+
+.trade-panel-slider {
+    display: flex;
+    align-items: center;
+    margin: 12px 0 31px;
+}
+
+.trade-panel-slider .ui-state-default,
+.trade-panel-slider .ui-widget-content .ui-state-default {
+    width: 6px;
+    height: 6px;
+    border-radius: 0;
+    background: #FFCF54;
+    border: none;
+    padding: 0;
+    margin: 0;
+    top: -1px;
+    transform: rotate(45deg) translateY(-50%);
+}
+
+.trade-slide-bg-icon {
+    height: 6px;
+    width: 6px;
+    background: #000000;
+    transform: rotate(45deg);
+}
+
+.trade-slide-bg-icon {
+    position: absolute;
+    top: -3px;
+}
+
+.bg-icon-1 {
+    left: 0;
+}
+
+.bg-icon-2 {
+    left: calc(33.3333% + 2px);
+}
+
+.bg-icon-3 {
+    left: calc(66.6666% + 2px);
+}
+
+.bg-icon-4 {
+    left: calc(100% - 6px);
+}
+
+.slide-icon-bg-value {
+    font-size: 12px;
+    color: #666666;
+}
+
+.slide-icon-bg-value {
+    position: absolute;
+    top: 6px;
+}
+
+.value-25 {
+    left: 0;
+}
+
+.value-50 {
+    left: calc(33.3333% + 2px - 5px);
+}
+
+.value-75 {
+    left: calc(66.6666% + 2px - 10px);
+}
+
+.value-100 {
+    left: calc(100% - 30px);
+}
+
+.trade-panel-header {
+    display: flex;
+    margin: 10px 0 8px;
+    justify-content: space-between;
+}
+
+.trade-order-title-wrap {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #1D1D1D;
+    margin-bottom: 4px;
+}
+
+.trade-order-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    align-items: center;
+}
+
+.trade-cancel-btn {
+    background: #212121;
+    border-radius: 2px;
+    width: 73px;
+    height: 23px;
+    text-align: center;
+    line-height: 23px;
+    padding: 0;
+    color: white;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.trade-order-label {
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+}
+
+.trade-divi {
+    width: 1px;
+    height: 14px;
+    background: #000000;
+    margin: 0 6px;
+    display: inline-block;
+}
+
+.trade-panel-infor {
+    margin-bottom: 10px;
+}
+
+.box-candle {
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.box-candle-col {
+    width: calc(50% - 5px);
+    padding: 12px 11px;
+}
+
+.candle-value-title {
+    color: #FF4141;
+    font-weight: 500;
+    font-size: 24px;
+    margin-bottom: 7px;
+}
+
+.candle-infor-row {
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+}
+
+.button-candle {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+}
+
+.btn-candle {
+    width: calc(50% - 8px);
+    height: 40px;
+    padding: 0;
+    line-height: 40px;
+    text-align: center;
+    font-size: 14px;
+    color: #FFFFFF;
+}
+
+.candle-panel .trade-panel-header {
+    margin-bottom: 23px;
+}
+
+.trade-progress-bar-reverse {
+    right: 0;
+    left: unset;
+}
+
+.candle-box-empty{
+    height: 400px;
+    margin-bottom: 10px;
 }
